--- a/index-dev.html
+++ b/index-dev.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%">
 <head>
   <meta charset="utf-8">
 </head>
-<body>
-  <div id="root">
+<body style="height: 100%; margin: 0; padding: 8px; box-sizing: border-box;">
+  <div id="root" style="height: 100%">
 
     <script src="/webpack-dev-server.js"></script>
 
