Add New Relic monitoring
Create a separate min.js file to house the script which loads in from
the <head>. The script itself is from New Relic.

--- a/index-dev.html
+++ b/index-dev.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles.css">
+  <script src="new-relic-monitoring.min.js"></script>
 </head>
 <body>
   <div id="root">
@@ -12,7 +13,6 @@
     <!-- Main -->
     <script src="../dist/external.js"></script>
     <script src="../dist/cloud-file-connector-dev-bundle.js"></script>
-
   </div>
 </body>
 
