--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles.css">
+  <script src="new-relic-monitoring.min.js"></script>
 </head>
 <body>
   <div id="root">
